--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ body {
     background-repeat: no-repeat;
     background-position: top center;
     background-size: cover;
+    height: 100vh;
 }
 
 body * {
@@ -37,7 +38,8 @@ body * {
 
 
 #container {
-    width: 360px;
+    width: 100%;
+    max-width: 588px;
     margin: 56px auto 0px;
     padding: 0 24px;
 }
@@ -139,4 +141,14 @@ ul li a{
 ul li a:hover {
     background: var(--surface-color-hover);
     border: 1.5px solid var(--text-color);
+}
+
+@media (min-width: 700px) {
+    :root {
+        --bg-url: url(./assets/bg.jpg);
+    }
+
+    .light {
+        --bg-url: url(./assets/bg-light.jpg);
+    }
 }
