--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
     --surface-color: rgba(255, 255, 255, 0.1);
     --surface-color-hover: rgba(255, 255, 255, 0.06);
     --switch-bg-url: url(./assets/moon-outline.svg);
+    --highlight-color: rgba(255, 255, 255, 0.2);
     
 }
 
@@ -21,6 +22,7 @@
     --surface-color: rgba(0, 0, 0, 0.05);
     --surface-color-hover: rgba(0, 0, 0, 0.02);
     --switch-bg-url: url(./assets/sun.svg);
+    --highlight-color: rgba(0, 0, 0, 0.1);
 }
 
 body {
@@ -90,11 +92,16 @@ body * {
     left: 0;
     z-index: 1;
     transform: translateY(-50%);
+
+    animation: slide-back 0.2s;
 }
 
 .light #switch button {
-    right: 0;
-    left: initial;
+    animation: slide-in 0.2s forwards;
+}
+
+#switch button:hover {
+    outline: 8px solid var(--highlight-color);
 }
 
 #switch span {
@@ -150,5 +157,23 @@ ul li a:hover {
 
     .light {
         --bg-url: url(./assets/bg-light.jpg);
+    }
+}
+
+@keyframes slide-in {
+    from {
+        left: 0;
+    }
+    to {
+        left: 50%;
+    }
+}
+
+@keyframes slide-back {
+    from {
+        left: 50%;
+    }
+    to {
+        left: 0;
     }
 }
